--- a/CppTemplateLearning/CppTemplateLearning.vcxproj
+++ b/CppTemplateLearning/CppTemplateLearning.vcxproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="basic\max.hpp" />
+    <ClInclude Include="basic\stack1.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
