--- a/CppTemplateLearning/CppTemplateLearning.vcxproj.filters
+++ b/CppTemplateLearning/CppTemplateLearning.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="basic\max.hpp">
       <Filter>源文件\basic</Filter>
     </ClInclude>
+    <ClInclude Include="basic\stack1.hpp">
+      <Filter>源文件\basic</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
